<resources>
    <string name="app_name">AirMash</string>
    <string name="st1">Jog Air Mesh Summer Snaker Shoes Sports Split On Max Size 46 Athletics Shoes</string>
    <string name="st2">From Tianjian</string>
    <string name="st3">Minium order 5Pcs</string>
    <string name="st4">Ks-15,000</string>
    <string name="st5">/Pcs</string>
    <string name="st6">28 Sold</string>
    <string name="st7">Products Options</string>
    <string name="st8">Select</string>
    <string name="st9">ADD To Card</string>
    <string name="st10">BUY NOW</string>
</resources>