<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:orientation="vertical">
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/st1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st3"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/st4"
            android:textColor="@color/colorGold"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/st5" />

        <TextView
            android:text="@string/st6"
            android:layout_width="wrap_content"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"/>

    </LinearLayout>
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />
</LinearLayout>